--- a/app/views/fl_engine/articles/index.html.erb
+++ b/app/views/fl_engine/articles/index.html.erb
@@ -1,5 +1,6 @@
-<%= 'it is working' %>
-
+<%= link_to t(:create_new_post), new_article_path %>
+<br>
 <% @articles.each do |article|%>
-  article.title
+  <br>
+  <%= link_to article.title, article_path(article) %>
 <% end %>
